{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 52,
  "lineage": "9c57e873-22b3-8a35-ea30-32ddc06ee4fa",
  "resources": [
    {
      "module": "module.cloud_sql",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "10.183.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-03-05T08:04:27.154-08:00",
            "id": "projects/adminserein/global/addresses/bdd-adminserein-private-ip-range",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "bdd-adminserein-private-ip-range",
            "network": "https://www.googleapis.com/compute/v1/projects/adminserein/global/networks/vpc-adminserein",
            "prefix_length": 16,
            "project": "adminserein",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adminserein/global/addresses/bdd-adminserein-private-ip-range"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-05T08:04:27.180-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/adminserein/global/firewalls/vpc-adminserein-allow-http-https",
            "log_config": [],
            "name": "vpc-adminserein-allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/adminserein/global/networks/vpc-adminserein",
            "priority": 1000,
            "project": "adminserein",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adminserein/global/firewalls/vpc-adminserein-allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-05T08:04:27.566-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/adminserein/global/firewalls/vpc-adminserein-allow-ssh",
            "log_config": [],
            "name": "vpc-adminserein-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/adminserein/global/networks/vpc-adminserein",
            "priority": 1000,
            "project": "adminserein",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adminserein/global/firewalls/vpc-adminserein-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/adminserein/global/networks/vpc-adminserein",
            "mtu": 0,
            "name": "vpc-adminserein",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4417223126539310992",
            "project": "adminserein",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adminserein/global/networks/vpc-adminserein"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-05T08:04:27.371-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/adminserein/regions/europe-west1/subnetworks/vpc-adminserein-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "vpc-adminserein-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/adminserein/global/networks/vpc-adminserein",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "adminserein",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adminserein/regions/europe-west1/subnetworks/vpc-adminserein-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}